# thdora

./: .dockerignore  .env.example  .gitignore  AGENTE.md  ARCHITECTURE.md  CHANGELOG.md  COMO_PROCEDER.md  CONTEXT.md  CONTRIBUTING.md  Dockerfile  HANDLERS.md  Makefile  PLAN_MANANA.md  README.md  ROADMAP.md  VISION.md  alembic.ini  api_client, handlers y main"  docker-compose.yml  llms.txt  pyproject.toml  pytest.ini  requirements.txt
.github/: AGENTE.md  COMO_PROCEDER.md
.github/audits/: 2026-06-18-session.md
.github/diarios/: 2026-06-15.md
.github/workflows/: ci.yml  deploy.yml  docker-health.yml  tests.yml
alembic/: env.py
alembic/versions/: 001_add_user_id.py  sprint5_add_user_id_and_allowed_users.py
app/: handlers.py
data/: thdora.db
docker/: .env.docker.example  Dockerfile  docker-compose.yml  entrypoint-api.sh  entrypoint-bot.sh  entrypoint.sh
docs/: ADR-001-api-client-singleton.md  ADR-002-user-id-obligatorio.md  AI_QUERIES_2026-06-18.md  AI_STACK.md  API_REFERENCE.md  APRENDIZAJE_PYTHON.md  ARCHITECTURE.md  BRANCHES.md  CEIP_DIARIO_BOLSILLO.md  CLASES_BEGO.md  CONVENCIONES.md  DIARIO.md  DIARIO_BOLSILLO.md  ECOSISTEMA.md  ECOSYSTEM.md  F12_NOTIFICACIONES_DESIGN.md  FLUJOS_DETALLADOS.md  GIT_GUIDE.md  GUIA_BEGO.md  INDEX.md  INTEGRACION_TICKET_PARSER.md  MARKET_STUDY.md  MARKET_STUDY_2.md  NLP_ARQUITECTURA.md  PERSONAL-DATA-PLATFORM.md  REGLAS.md  RESEARCH.md  ROADMAP.md  SPRINT_NEXT.md  STARTUP_RUNBOOK.md  THDORA_AUDIT_2026-06-18.md  TROUBLESHOOTING.md  diario-2026-06-18.md  estado-tareas.md  nueva_sesion.sh
docs/architecture/: ARCHITECTURE.md  repo-map.md
docs/architecture/decisions/: ADR-001-monorepo.md  ADR-002-interfaces-abc.md  ADR-003-json-persistence.md  ADR-004-relacion-thea-ia.md
docs/auditoria/: 2026-03-25.md  2026-03-27.md  AUDIT-2026-04-29.md  README.md  thea-ia.md
docs/bot/: commands.md
docs/deployment/: docker.md
docs/diarios/: 2026-03-23.md  2026-03-24.md  2026-03-25.md  2026-03-27.md  2026-03-28.md  2026-04-12.md  2026-04-13.md  2026-04-14-sesion-02.md  2026-04-14-sesion-03.md  2026-04-14.md  2026-04-23-cierre.md  2026-04-23.md  2026-04-24.md  2026-04-27.md  2026-04-29.md  2026-05-27.md  2026-06-14.md  2026-06-15.md
docs/ias/: README.md  auditoria-tecnica.md
docs/modules/: api.md  bot.md  core.md  db.md
docs/sesiones/: 2026-06-15.md  2026-06-18-docker-nueva-maquina.md
docs/sessions/: 2026-03-28-session-auditoria.md  2026-03-28-vision-plataforma.md
docs/setup/: ENTORNO-LOCAL.md  SETUP.md  debug-arranque.md  dispositivos-instalaciones.md  entorno-local.md  madre-deploy.md  nueva-maquina.md  openclaw-status.md
docs/testing/: pytest.md
inbox/: 2026-06-24-AUDITORIA-MANANA.md  2026-06-24-plan-bots-agentes.md  2026-06-24-vision-factoria-bots.md  README.md
monitoring/prometheus/: prometheus.yml
platform/: .env.example  Dockerfile.platform  README.md  docker-compose.platform.yml  main.py  requirements.txt
platform/agents/: crud.py  factory.py  models.py  orchestrator.py  schemas.py
platform/api/endpoints/: agents.py
platform/core/: auth.py  cache.py  config.py  database.py
platform/migrations/: 001_initial_schema.sql  env.py
platform/migrations/versions/: 0001_initial_platform.py
platform/tools/: registry.py
platform/tools/tools_implementations/: http_tool.py  telegram.py
scripts/: ai_audit.py  autotest.py  check_env.py  deploy.sh  deploy_madre.sh  migrate_user_id.py  smoke_test.py
src/: __init__.py  config.py
src/agents/: __init__.py  config.py  metrics.py  mood_detector.py  scheduler_tasks.py  summarizer.py
src/agents/core/: __init__.py  graph.py  node.py  state.py
src/agents/memory/: __init__.py  (+4 more)
src/ai/: __init__.py  context_builder.py  functions.py  groq_client.py  intent_parser.py
src/api/: __init__.py  appointments_router.py  deps.py  habits_router.py  main.py
src/bot/: __init__.py  api_client.py  groq_context.py  groq_router.py  handlers.py  http_client.py  keyboards.py  llm_backend.py  llm_factory.py  main.py  middleware.py  ollama_router.py  scheduler.py
src/core/: __init__.py  __init__impl.py  abstract_lifemanager.py  appointment.py  demo.py  habit.py  json_lifemanager.py  memory_lifemanager.py
src/db/: __init__.py  base.py  models.py  session.py
src/monitoring/: __init__.py  config.py  health.py  metrics.py  middleware.py
src/services/: github_client.py
tests/: __init__.py  conftest.py  test_accum.py  test_api.py  test_api_client.py  test_citas.py  test_config.py  test_habitos.py  test_json_lifemanager.py  test_memory_lifemanager.py
tests/bot/: test_handlers_citas.py  test_handlers_habitos.py  test_handlers_menu.py
tests/e2e/: __init__.py
tests/integration/: __init__.py  test_api.py
tests/platform/: test_orchestrator.py
tests/test_api/: test_appointments.py  test_habits.py  test_summary.py
tests/test_bot/: test_api_client.py  test_nlp_handler.py
tests/unit/: __init__.py  test_appointments_overlap.py  test_json_lifemanager.py  test_memory_lifemanager.py
(+76 files in other folders)
