[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "thdora"
version = "0.8.0"
description = "Ecosistema de gestión personal con IA local — Bot Telegram + FastAPI + SQLite + Ollama"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Álvaro Fernández Mota", email = "" }
]
keywords = ["telegram-bot", "fastapi", "ollama", "life-management", "ai", "personal-assistant", "sqlite"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "python-telegram-bot>=21.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "dateparser>=1.2.0",
    "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "alembic>=1.13.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src --cov-report=term-missing"
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

# ── Entorno de desarrollo ──────────────────────────────────────────────
# Ubuntu 22.04 WSL2 — Python 3.10
# Activar venv  : source .venv/bin/activate
# Instalar deps : pip install sqlalchemy fastapi uvicorn pydantic \
#                 "python-telegram-bot>=21.0" httpx python-dotenv dateparser
# Arrancar API  : make run-api
# Arrancar bot  : make run-bot
