[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "thdora"
version = "0.17.0"
description = "Asistente personal Telegram — bot + API"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",   # line too long (ruff format se encarga)
    "B008",   # do not perform function calls in default arguments
    "UP007",  # Use X | Y instead of Optional (compatibilidad)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401", "F811"]  # imports no usados en tests ok

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
log_cli = true
log_cli_level = "WARNING"
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["src"]
omit = [
    "src/bot/handlers/voice.py",
    "src/bot/handlers/weather.py",
    "src/agents/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
